--- a/Clients/Course.Web/Views/_ViewImports.cshtml
+++ b/Clients/Course.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Course.Web
 @using Course.Web.Models
+@using Course.Web.Models.CatalogModels;
+@using Course.Web.Models.BasketModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
