--- a/Clients/Course.Web/Views/Basket/Index.cshtml
+++ b/Clients/Course.Web/Views/Basket/Index.cshtml
@@ -28,13 +28,14 @@
                             <tr>
                                 <td>@item.CourseName</td>
                                 <td>
-                                    @item.CurrentPrice TL
+                                    @item.CurrentPrice TL @(Model.HasDiscount ? $"(%{Model.DiscountRate.Value} uygulandı)" : "")
                                 </td>
                                 <td>
-                                    <a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItemToBasket" asp-route-courseId="@item.CourseId">sil</a>
+                                    <a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItem" asp-route-courseId="@item.CourseId">sil</a>
                                 </td>
                             </tr>
                         }
+
                         @if (Model.HasDiscount)
                         {
 
@@ -51,6 +52,32 @@
                         </tr>
                     </table>
 
+                    <form asp-controller="Basket" asp-action="ApplyDiscount">
+                        @if (Model.HasDiscount)
+                        {
+                            <div class="alert alert-success">
+                                "@Model.DiscountCode"indirim kodu uygulandı
+                                <a asp-controller="Basket" asp-action="CancelDiscount"> (iptal et)</a>
+                            </div>
+
+                        }
+
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="DiscountApplyVM.Code">
+                            <button class="btn btn-outline-secondary" type="submit">Uygula</button>
+                        </div>
+
+                        @if (TempData["discountStatus"] != null && (bool)TempData["discountStatus"] == false)
+                        {
+                            <div class="text-danger">indirim kodu geçersiz</div>
+                        }
+                        @if (TempData["discountError"] != null)
+                        {
+                            <div class="text-danger">@TempData["discountError"]</div>
+                        }
+                    </form>
+                    <a class="btn btn-success" asp-controller="Order" asp-action="Checkout">Ödeme bilgileri</a>
+                    <a class="btn btn-warning" asp-controller="Home" asp-action="Index">Kursları incelemeye devam et</a>
                 }
                 else
                 {
