--- a/Clients/Course.Web/Views/Basket/Index.cshtml
+++ b/Clients/Course.Web/Views/Basket/Index.cshtml
@@ -31,7 +31,7 @@
                                     @item.CurrentPrice TL @(Model.HasDiscount ? $"(%{Model.DiscountRate.Value} uygulandı)" : "")
                                 </td>
                                 <td>
-                                    <a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItem" asp-route-courseId="@item.CourseId">sil</a>
+                                    <a class="btn btn-danger" asp-controller="Basket" asp-action="RemoveBasketItemToBasket" asp-route-courseId="@item.CourseId">sil</a>
                                 </td>
                             </tr>
                         }
@@ -76,7 +76,7 @@
                             <div class="text-danger">@TempData["discountError"]</div>
                         }
                     </form>
-                    <a class="btn btn-success" asp-controller="Order" asp-action="Checkout">Ödeme bilgileri</a>
+                    <a class="btn btn-success" asp-controller="Orders" asp-action="Checkout">Ödeme bilgileri</a>
                     <a class="btn btn-warning" asp-controller="Home" asp-action="Index">Kursları incelemeye devam et</a>
                 }
                 else
