--- a/Clients/Course.Web/Views/_ViewImports.cshtml
+++ b/Clients/Course.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using Course.Web.Models
 @using Course.Web.Models.CatalogModels;
 @using Course.Web.Models.BasketModels;
+@using Course.Web.Models.OrderModels;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
